# hive

./: GENESIS_ENGINE_PROMPT.md  HANDOFF_PROMPT.md  pyproject.toml
docs/: A21_Atomic_Structure.md  README.md  appendix_a_genesis_engine_cli_reference.md  appendix_b_sacred_codon_pattern_library.md  appendix_c_chemical_bond_analysis_tools.md  appendix_d_case_study_collection.md  appendix_e_troubleshooting_guide.md  appendix_f_integration_guides.md  appendix_g_metrics_and_monitoring.md  appendix_h_team_training_materials.md  deep_mapping_chemistry.md  dialogue_analysis_review.md  dna_matched_metrics_spec.md  hive_preprint_part1_enchanted_apiary.md  hive_preprint_part2_beekeeper_grimoire.md  hive_preprint_part3_chemical_architecture.md  hive_preprint_part4_growing_your_hive.md  hive_preprint_part5_physical_constants_review.md  mistral_bee_manual.md
genesis_engine/: __init__.py  analysis.py  cli.py  graphing.py  hatch.py  initialization.py  listing.py  refactoring.py  utils.py  validation.py
hive_physics/: README.md  __init__.py  constants.py  events.py  genesis-cli-integration-example.py
hive_physics/adaptation/: aggregate.py  patcher.py  toxicity.py
hive_physics/cognitive/: __init__.py  aggregate.py
hive_physics/dashboards/: observatory.json
hive_physics/data/: mock_metrics.json
hive_physics/datasources/: git_history.py  kubernetes.py  prometheus.py
hive_physics/dna_core/: __init__.py  royal_jelly.py
hive_physics/measurements/: __init__.py  c_hive.py  (+2 more)
mistral_agent/: __init__.py  config.md  config.py  context.py  hands.py  mind.py  run_agent.py
(+39 files in other folders)
